Fix firefox-newsletter button contrast

--- a/media/css/base/banners/firefox-newsletter.scss
+++ b/media/css/base/banners/firefox-newsletter.scss
@@ -54,6 +54,10 @@
         transition: all 300ms ease-out;
         white-space: nowrap;
 
+        &:link {
+            color: $color-black;
+        }
+
         &:hover,
         &:focus,
         &:active {
